@@ -1,7 +1,7 @@
 <?php
 /*
 Addon Name: 2Checkout payment plugin
-Author: S H Mohanjith (Incsub)
+Author: Incsub
 Author URI: http://premium.wpmudev.org
 Gateway ID: twocheckout
 */
